worked on navbar & registerpage & form-validate

--- a/firebase-project/src/style.css
+++ b/firebase-project/src/style.css
@@ -2,49 +2,70 @@
   box-sizing: border-box;
 }
 
-.para-head{
-    color:#fff
+body{
+  margin:0px;
+  padding:0px;
+}
+
+.form-head {
+  color: #e6d1d0;
+  margin-bottom: 6%;
+  margin-top: 6%;
+  letter-spacing: 6px;
 }
 .form-container {
-    width: 850px;
-    height: 100%;
-    margin: auto;
-    border: 6px solid grey;
-    border-radius: 3px;
-    background-image: url("https://m.blog.hu/hr/hrdoktor/image/blur-building-city-1013516.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  
-  
+  width: 600px;
+  height: 100%;
+  margin: auto;
+  border-radius: 3px;
+  background-color: #545871;
+  padding-top: 10px;
+  border-radius: 9px;
+  margin-bottom: 14px;
+  box-shadow: 5px 5px 5px 5px white;
+}
+
 form {
-  width: 700px;
+  width: 500px;
   margin: 0 auto;
 }
 form label {
   display: flex;
   margin-top: 15px;
-  font-size: 18px;
+  font-size: 21px;
   margin-bottom: 5px;
-  color:white
+  color: #878ca0;
 }
+.fixCss{
+  width:100%;
+  display: flex;
+
+}
+.fixLabel1{
+  margin-right:20px;
+}
+
 form input {
   width: 100%;
   padding: 7px;
   border: 1px solid gray;
-  border-radius: 6px;
+  border-radius: 3px;
   outline: none;
   font-size: 20px;
+  padding: 12px;
+  letter-spacing: 3px;
 }
 
 .submitBtn {
   width: 500px;
-  height: 35px;
+  height: 45px;
   margin-top: 20px;
   border: none;
-  background-color: #49c1a2;
-  color: white;
+  background-color: #ecd0cd;
   font-size: 18px;
   margin-bottom: 20px;
+  color: #4f3c39;
+  font-size: 20px;
+  letter-spacing: 5px;
+  
 }
